--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 		<div class="header-container">
 			<div class="container">
-				<img src="SplashImage.png" alt="" />
+				<img class="lofive-logo" src="SplashImage.png" alt="" />
 				<h1>Lo<strong>Five</strong></h1>
-				<p>Puzzles. Chill. LoFi.</p>
+				<p>Puzzle. Chill. LoFive.</p>
 				<a class="app-store-link" href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8">
 					<img class="app-store-logo" src="App-Store.png" alt="" />
 				</a>
@@ -85,6 +85,58 @@
 			</div>
 		</div>
 
+		<div class="feature-container-mobile">
+			<div class="container">
+				<table class="featured-table">
+					<tr>
+						<td class="featured-element">
+							<div class="image"><img src="StayBelow.png" alt="" /></div>
+						</td>
+					</tr>
+					<tr>
+						<td class="featured-element">
+							<div class="text">
+								<div class="text-content">
+									<h2>Stay below five or it’s game over</h2>
+									<p>Play by placing tiles on the grid to earn points. Stacking tiles adds the numbers while filling rows and columns subtracts.</p>
+								</div>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td class="featured-element">
+							<div class="image"><img src="Themes.png" alt="" /></div>
+						</td>
+					</tr>
+					<tr>
+						<td class="featured-element">
+							<div class="text">
+								<div class="text-content">
+									<h2>Themes to fit your vibe</h2>
+									<p>Choose from color palettes and unlock more themes by reaching new high scores.</p>
+								</div>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td class="featured-element">
+							<div class="image"><img src="Turbo.png" alt="" /></div>
+						</td>
+					</tr>
+					<tr>
+						<td class="featured-element">
+							<div class="text">
+								<div class="text-content">
+									<h2>Themes to fit your vibe</h2>
+									<p>Choose from color palettes and unlock more themes by reaching new high scores.</p>
+								</div>
+							</div>
+						</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+
 		<div class="upcoming-container">
 			<div class="container">
 				<table class="featured-table">
@@ -119,6 +171,47 @@
 							</td>
 							<td class="featured-element featured-right">
 								<div class="upcoming-image"><img src="swirl.png" alt="" /></div>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+
+		<div class="upcoming-container-mobile">
+			<div class="container">
+				<table class="featured-table">
+					<tbody>
+						<tr>
+							<td class="featured-element">
+								<div class="upcoming-image"><img src="unread.png" alt="" /></div>
+							</td>
+						</tr>
+						<tr>
+							<td class="featured-element">
+								<div class="text">
+									<div class="text-content">
+										<h3>In Development</h3>
+										<h2>Unread</h2>
+										<p>Reawaken a digital messenger from the early World Wide Web a journey to deliver an important message, uncovering a curious series of unread messages along the way in this narrative driven puzzle mystery.</p>
+									</div>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="featured-element">
+								<div class="upcoming-image"><img src="swirl.png" alt="" /></div>
+							</td>
+						</tr>
+						<tr>
+							<td class="featured-element">
+								<div class="text">
+									<div class="text-content">
+										<h3>In Development</h3>
+										<h2>Project Swirl</h2>
+										<p>Collect, mix, discover, and unleash the power of beverages in this top-down action roguelite.</p>
+									</div>
+								</div>
 							</td>
 						</tr>
 					</tbody>
