--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 					<tbody>
 						<tr>
 							<td class="featured-element featured-left">
-								<div class="upcoming-image"><img src="unread.png" alt="" /></div>
+								<div class="upcoming-image"><img src="Unread.png" alt="" /></div>
 							</td>
 							<td class="divider">
 							</td>
@@ -170,7 +170,7 @@
 							<td class="divider">
 							</td>
 							<td class="featured-element featured-right">
-								<div class="upcoming-image"><img src="swirl.png" alt="" /></div>
+								<div class="upcoming-image"><img src="Swirl.png" alt="" /></div>
 							</td>
 						</tr>
 					</tbody>
@@ -184,7 +184,7 @@
 					<tbody>
 						<tr>
 							<td class="featured-element">
-								<div class="upcoming-image"><img src="unread.png" alt="" /></div>
+								<div class="upcoming-image"><img src="Unread.png" alt="" /></div>
 							</td>
 						</tr>
 						<tr>
@@ -200,7 +200,7 @@
 						</tr>
 						<tr>
 							<td class="featured-element">
-								<div class="upcoming-image"><img src="swirl.png" alt="" /></div>
+								<div class="upcoming-image"><img src="Swirl.png" alt="" /></div>
 							</td>
 						</tr>
 						<tr>
