--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 		<div class="header-container">
 			<div class="container">
-				<img class="lofive-logo" src="SplashImage.png" alt="" />
+				<img class="lofive-logo image-shadow" src="SplashImage.png" alt="" />
 				<h1>Lo<strong>Five</strong></h1>
 				<p>Puzzle. Chill. LoFive.</p>
 				<a class="app-store-link" href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8">
@@ -48,12 +48,12 @@
 						<td class="divider">
 						</td>
 						<td class="featured-element featured-right">
-							<div class="image"><img src="StayBelow.png" alt="" /></div>
+							<div class="image"><img class="image-shadow" src="StayBelow.png" alt="" /></div>
 						</td>
 					</tr>
 					<tr>
 						<td class="featured-element featured-left">
-							<div class="image"><img src="Themes.png" alt="" /></div>
+							<div class="image"><img class="image-shadow" src="Themes.png" alt="" /></div>
 						</td>
 						<td class="divider">
 						</td>
@@ -78,7 +78,7 @@
 						<td class="divider">
 						</td>
 						<td class="featured-element featured-right">
-							<div class="image"><img src="Turbo.png" alt="" /></div>
+							<div class="image"><img class="image-shadow" src="Turbo.png" alt="" /></div>
 						</td>
 					</tr>
 				</table>
@@ -90,7 +90,7 @@
 				<table class="featured-table">
 					<tr>
 						<td class="featured-element">
-							<div class="image"><img src="StayBelow.png" alt="" /></div>
+							<div class="image"><img class="image-shadow" src="StayBelow.png" alt="" /></div>
 						</td>
 					</tr>
 					<tr>
@@ -105,7 +105,7 @@
 					</tr>
 					<tr>
 						<td class="featured-element">
-							<div class="image"><img src="Themes.png" alt="" /></div>
+							<div class="image"><img class="image-shadow" src="Themes.png" alt="" /></div>
 						</td>
 					</tr>
 					<tr>
@@ -120,7 +120,7 @@
 					</tr>
 					<tr>
 						<td class="featured-element">
-							<div class="image"><img src="Turbo.png" alt="" /></div>
+							<div class="image"><img class="image-shadow" src="Turbo.png" alt="" /></div>
 						</td>
 					</tr>
 					<tr>
@@ -143,7 +143,7 @@
 					<tbody>
 						<tr>
 							<td class="featured-element featured-left">
-								<div class="upcoming-image"><img src="unread.png" alt="" /></div>
+								<div class="upcoming-image"><img class="image-shadow" src="unread.png" alt="" /></div>
 							</td>
 							<td class="divider">
 							</td>
@@ -170,7 +170,7 @@
 							<td class="divider">
 							</td>
 							<td class="featured-element featured-right">
-								<div class="upcoming-image"><img src="swirl.png" alt="" /></div>
+								<div class="upcoming-image"><img class="image-shadow" src="swirl.png" alt="" /></div>
 							</td>
 						</tr>
 					</tbody>
@@ -184,7 +184,7 @@
 					<tbody>
 						<tr>
 							<td class="featured-element">
-								<div class="upcoming-image"><img src="unread.png" alt="" /></div>
+								<div class="upcoming-image"><img class="image-shadow" src="unread.png" alt="" /></div>
 							</td>
 						</tr>
 						<tr>
@@ -200,7 +200,7 @@
 						</tr>
 						<tr>
 							<td class="featured-element">
-								<div class="upcoming-image"><img src="swirl.png" alt="" /></div>
+								<div class="upcoming-image"><img class="image-shadow" src="swirl.png" alt="" /></div>
 							</td>
 						</tr>
 						<tr>
