--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 						<td class="featured-element featured-left">
 							<div class="text">
 								<div class="text-content">
-									<h2>Themes to fit your vibe</h2>
-									<p>Choose from color palettes and unlock more themes by reaching new high scores.</p>
+									<h2>Race against the clock</h2>
+									<p>Switch to Turbo Mode and place your tile before the screen fills up to get 2x points!</p>
 								</div>
 							</div>
 						</td>
@@ -127,8 +127,8 @@
 						<td class="featured-element">
 							<div class="text">
 								<div class="text-content">
-									<h2>Themes to fit your vibe</h2>
-									<p>Choose from color palettes and unlock more themes by reaching new high scores.</p>
+									<h2>Race against the clock</h2>
+									<p>Switch to Turbo Mode and place your tile before the screen fills up to get 2x points!</p>
 								</div>
 							</div>
 						</td>
@@ -152,7 +152,7 @@
 									<div class="text-content">
 										<h3>In Development</h3>
 										<h2>Unread</h2>
-										<p>Reawaken a digital messenger from the early World Wide Web a journey to deliver an important message, uncovering a curious series of unread messages along the way in this narrative driven puzzle mystery.</p>
+										<p>Reawaken a digital messenger from the early World Wide Web on a journey to deliver an important message. Uncover a curious series of unread messages along the way in this narrative driven puzzle mystery.</p>
 									</div>
 								</div>
 							</td>
@@ -193,7 +193,7 @@
 									<div class="text-content">
 										<h3>In Development</h3>
 										<h2>Unread</h2>
-										<p>Reawaken a digital messenger from the early World Wide Web a journey to deliver an important message, uncovering a curious series of unread messages along the way in this narrative driven puzzle mystery.</p>
+										<p>Reawaken a digital messenger from the early World Wide Web on a journey to deliver an important message. Uncover a curious series of unread messages along the way in this narrative driven puzzle mystery.</p>
 									</div>
 								</div>
 							</td>
