--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 						<td class="divider">
 						</td>
 						<td class="featured-element featured-right">
-							<div class="image"><img class="image-shadow" src="StayBelow.png" alt="A screenshot of the puzzle game LoFive where a player is placing pieces." /></div>
+							<div class="image"><img class="image-shadow" src="StayBelow-New.png" alt="A screenshot of the puzzle game LoFive where a player is placing pieces." /></div>
 						</td>
 					</tr>
 					<tr>
 						<td class="featured-element featured-left">
-							<div class="image"><img class="image-shadow" src="Themes.png" alt="A screenshot of the puzzle game LoFive displaying a colorful theme." /></div>
+							<div class="image"><img class="image-shadow" src="X.png" alt="A screenshot of the puzzle game LoFive displaying a colorful theme." /></div>
 						</td>
 						<td class="divider">
 						</td>
@@ -78,7 +78,7 @@
 						<td class="divider">
 						</td>
 						<td class="featured-element featured-right">
-							<div class="image"><img class="image-shadow" src="Turbo.png" alt="A screenshot of the puzzle game LoFive where a user is playing a mode called Turbo Mode, which includes a timer." /></div>
+							<div class="image"><img class="image-shadow" src="Turbo-New.png" alt="A screenshot of the puzzle game LoFive where a user is playing a mode called Turbo Mode, which includes a timer." /></div>
 						</td>
 					</tr>
 				</table>
@@ -90,7 +90,7 @@
 				<table class="featured-table">
 					<tr>
 						<td class="featured-element">
-							<div class="image"><img class="image-shadow" src="StayBelow.png" alt="A screenshot of the puzzle game LoFive where a user is placing pieces." /></div>
+							<div class="image"><img class="image-shadow" src="StayBelow-New.png" alt="A screenshot of the puzzle game LoFive where a user is placing pieces." /></div>
 						</td>
 					</tr>
 					<tr>
@@ -105,7 +105,7 @@
 					</tr>
 					<tr>
 						<td class="featured-element">
-							<div class="image"><img class="image-shadow" src="Themes.png" alt="A screenshot of the puzzle game LoFive displaying a colorful theme." /></div>
+							<div class="image"><img class="image-shadow" src="X.png" alt="A screenshot of the puzzle game LoFive displaying a colorful theme." /></div>
 						</td>
 					</tr>
 					<tr>
