--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					</tr>
 					<tr>
 						<td class="featured-element">
-							<div class="image"><img class="image-shadow" src="Turbo.png" alt="A screenshot of the puzzle game LoFive where a user is playing a mode called Turbo Mode, which includes a timer." /></div>
+							<div class="image"><img class="image-shadow" src="Turbo-New.png" alt="A screenshot of the puzzle game LoFive where a user is playing a mode called Turbo Mode, which includes a timer." /></div>
 						</td>
 					</tr>
 					<tr>
